--- a/2021/p15/p15.cabal
+++ b/2021/p15/p15.cabal
@@ -30,5 +30,6 @@ executable p15
     build-depends:
         base ^>=4.14.3.0,
         containers ^>=0.6.5.1,
+        heap ^>=1.0.4,
     hs-source-dirs:   app
     default-language: Haskell2010
